2009-01-16  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R (graph.bipartite) : 
	fixed a typo bug in .Call, 'PACKAGE' was mistyped

	* interfaces/R/igraph/R/conversion.R (get.incidence.dense) : 
	fixed a 'g' instead of 'graph' bug

	* interfaces/R/igraph/R/structure.generators.R 
	(graph.incidence) : fixed some typo bugs

	* interfaces/R/igraph/R/foreign.R (read.graph.edgelist)
	(write.graph.edgelist, read.graph.ncol, write.graph.ncol)
	(read.graph.lgl, write.graph.lgl, read.graph.pajek)
	(write.graph.pajek, read.graph.dimacs, write.graph.dimacs)
	(read.graph.graphml, write.graph.graphml, read.graph.gml)
	(write.graph.gml, write.graph.dot, read.graph.graphdb) : 
	give error message for unknown arguments, so far these were ignored

2008-11-14  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/plot.R (igraph.Arrows) : handle 
	different edge line types and width for curved edges
	* interfaces/R/igraph/R/tkplot.R: curve the edges the same 
	direction as plot

2008-11-04  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structural.properties.R (shortest.paths) : 
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	'to' argument added

2008-11-03  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/tkplot.R :
	added support for curved edges

	* interfaces/R/igraph/R/plot.common.R (i.default.values) : 
	added 'curved' edge parameter
	* interfaces/R/igraph/R/plot.R (plot.igraph, igraph.Arrows) : 
	added support for curved edges

2008-11-02  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
	support for attributes

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
	support for vertex names

	* interfaces/R/igraph/R/conversion.R (get.incidence) : updated,
	sparse matrix support was added

	* interfaces/R/igraph/R/conversion.R (get.incidence) : added

	* interfaces/R/igraph/R/structure.generators.R
	(graph.incidence) : added sparse graph support
